# WebcamStreamerForWindows

./: CMakeLists.txt  README.md  main.c
include/: webcam_stream.h
lib/: webcam_stream.c
